<resources>
    <string name="app_name">SaveForMetroPicker</string>
    <string name="selected_station_text_show">click button below to select the station</string>
    <string name="button_select_the_station">select the station</string>
    <string name="rbtn_holodnogorskaya">Холодногорско-заводская</string>
    <string name="rbtn_alekseevskaya">Алексеевская</string>
    <string name="rbtn_saltovskaya">Салтовская</string>
    <string name="not_identify">Not identify</string>
    <string name="button_last_station">load last station</string>
    <string name="no_saved_stations">no saved stations</string>
    <string name="menu_item_clear_text">clear</string>
    <string name="menu_item_exit_text">exit</string>
    <string name="menu_item_send_text">send the station</string>
</resources>
