<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saveformetropicker.MainActivity">

    <TextView
        android:id="@+id/selected_station_text_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/selected_station_text_show"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_select_the_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selected_station_text_show"
        android:layout_centerHorizontal="true"
        android:onClick="ButtonSelectTheStation"
        android:text="@string/button_select_the_station"/>

    <Button
        android:id="@+id/button_last_station_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_select_the_station"
        android:layout_centerHorizontal="true"
        android:onClick="ButtonLastStationLoad"
        android:text="@string/button_last_station"/>

    <RadioGroup
        android:id="@+id/radio_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RadioButton
            android:id="@+id/rbutton_holodnogorskaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRButtonClicked"
            android:text="@string/rbtn_holodnogorskaya"
            android:textSize="17sp"/>

        <RadioButton
            android:id="@+id/rbutton_alekseevskaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRButtonClicked"
            android:text="@string/rbtn_alekseevskaya"
            android:textSize="17sp"/>

        <RadioButton
            android:id="@+id/rbutton_saltovskaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRButtonClicked"
            android:text="@string/rbtn_saltovskaya"
            android:textSize="17sp"/>
    </RadioGroup>

</RelativeLayout>
